Add an additional value to nsOverflowType so that compilers (in particular, gcc 4.5.*) know that one past the end is a value they'll need to deal with.  (Bug 602826)  r=roc  a2.0=blocking